Ensured H1 tags overlap content - The H1 on the solargraphy page was particularly hidden

--- a/src/styles/global.module.scss
+++ b/src/styles/global.module.scss
@@ -113,6 +113,8 @@ h1 {
   font-family: var(--heading-font);
   font-weight: 800;
   font-size: 4rem;
+  position: relative;
+  z-index: 1;
 }
 h2,
 h3 {
